--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.11.10",
+    "jotai": "^2.10.1",
+    "lenis": "^1.1.14",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
