--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.11.10",
+    "gsap": "^3.12.5",
     "jotai": "^2.10.1",
     "lenis": "^1.1.14",
     "postcss": "^8.4.47",
